--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;500;600;700&display=swap');
+:root{
+    --poppins: "Poppins", sans-serif;
+    --segoe: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --montserrat: "Montserrat", sans-serif;
+}
 *{
     margin: 0;
     padding: 0;
@@ -5,7 +11,110 @@
 }
 body{
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     display: grid;
     place-items: center;
+}
+form{
+    width: fit-content;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+input{
+    max-width: 10rem;
+    min-height: 1.6rem;
+    padding: 0.2rem 0.4rem;
+    font-size: 1rem;
+    background-color: rgb(177, 177, 177);
+    border: 3px solid black;
+    border-radius: 5px;
+    font-family: var(--segoe);
+}
+input::placeholder{
+    color: black;
+}
+button{
+    font-size: 1.2rem;
+    padding: 0.15rem 0.4rem;
+    font-family: var(--segoe);
+    font-weight: 600;
+    background-color: rgb(106, 178, 255);
+    border-radius: 5px;
+}
+.container{
+    min-width: 320px;
+    max-width: 340px;
+    background-color: grey;
+    padding: 0.7rem 1.8rem 1.4rem 1.8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    font-family: var(--poppins);
+    border-radius: 15px;
+    background-image: linear-gradient(to bottom, rgba(9, 9, 9, 0.1), rgba(9, 9, 9, 0.1)), url('../Images/backiee-118470-portrait.jpg');
+    background-size: cover;
+    background-position: center;
+    color: rgb(244, 244, 244);
+    backdrop-filter: blur(10px);
+}
+.appHeading{
+    font-size: 1rem;
+    font-weight: 400;
+}
+#displayCity{
+    font-family: var(--montserrat);
+    font-weight: 500;
+}
+#dateToday{
+    font-family: var(--montserrat);
+    font-weight: 400;
+    font-size: 1rem;
+}
+#displayTemp{
+    font-size: 2.8rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#weatherDescription{
+    font-weight: 500;
+}
+#displayMinMax{
+    font-weight: 400;
+}
+.city-date{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: -5px;
+}
+.temp-desc{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: -10px;
+}
+.desc-minmax{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.data-cont{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2.5rem;
+    /* justify-content: space-between; */
+}
+.coordinates-cont, .wind-cont, .humidity-cont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.2rem;
+}
+.coordinates-cont p, .wind-cont p, .humidity-cont p{
+    font-size: 0.8rem;
 }
