--- a/Styles/style.css
+++ b/Styles/style.css
@@ -14,6 +14,9 @@ body{
     width: 100vw;
     display: grid;
     place-items: center;
+    background-image: linear-gradient(to bottom, rgba(226, 226, 226, 0.3), rgba(226, 226, 226, 0.3)), url(../Images/219980.jpg);
+    background-size: cover;
+    background-position: center;
 }
 form{
     width: fit-content;
@@ -64,8 +67,6 @@ button{
     background-size: cover;
     background-position: center;
     color: rgb(244, 244, 244);
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(30px);
 }
 .appHeading{
     font-size: 1rem;
