--- a/Styles/style.css
+++ b/Styles/style.css
@@ -14,7 +14,7 @@ body{
     width: 100vw;
     display: grid;
     place-items: center;
-    background-image: linear-gradient(to bottom, rgba(226, 226, 226, 0.3), rgba(226, 226, 226, 0.3)), url(../Images/219980.jpg);
+    background-image: linear-gradient(to bottom, rgba(174, 174, 174, 0.8), rgba(174, 174, 174, 0.8)), url(../Images/219980.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -67,6 +67,9 @@ button{
     background-size: cover;
     background-position: center;
     color: rgb(244, 244, 244);
+    -webkit-box-shadow: 0px 0px 22px 2px rgba(59,59,59,1);
+    -moz-box-shadow: 0px 0px 22px 2px rgba(59,59,59,1);
+    box-shadow: 0px 0px 22px 2px rgba(59,59,59,1);
 }
 .appHeading{
     font-size: 1rem;
